apps/frontend/assets/css/phoenix.css
html {
  -webkit-text-size-adjust: 100%;
  line-height: 1.15;
}

body {
  margin: 0;
}

main {
  display: block;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

a {
  background-color: transparent;
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

b,
strong {
  font-weight: bolder;
}

code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

img {
  border-style: none;
}

button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

button,
input {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

[type="button"],
[type="reset"],
[type="submit"],
button {
  -webkit-appearance: button;
}

[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring,
button:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

progress {
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details {
  display: block;
}

summary {
  display: list-item;
}

[hidden],
template {
  display: none;
}

:root {
  --max-size: 720px;
  --kbd-height: min(100em/2.15, 25vh);
  --board-width: min(80em, (100vh - var(--kbd-height) - 12vh - 10vh) * 5/6);
  --letter-size: calc(var(--board-width) / 5.5);
  --letter-font: calc(var(--letter-size) / 1.75);
  --letter-gap: calc(var(--letter-size) / 8);
}

body {
  --colorRight: #3aa394;
  --colorPlace: #d3ad69;
  --colorWrong: #312a2c;
  --colorWrongFG: #504a4b;
}

body.high {
  --colorRight: #e36322;
  --colorPlace: #0197f6;
}

html {
  background-color: #6e5c62;
  font-size: min(var(--max-size) / 100, 100vw/100);
  height: 100%;
  margin: 0 auto;
  max-width: var(--max-size);
  width: 100%;
}

* {
  outline: none;
  touch-action: manipulation;
}

body {
  color: #fafaff;
  font-family: Mitr, sans-serif;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  width: 100%;
}

body,
h1 {
  font-weight: 600;
}

h1 {
  font-size: 4vh;
  line-height: 3vh;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
}

a {
  color: #ebe;
}

header {
  grid-gap: 0 0.5vh;
  box-sizing: border-box;
  display: grid;
  flex-shrink: 0;
  grid-template-columns: 6.5vh 1fr 3vh 3vh;
  height: 6vh;
  max-width: 720px;
  padding: 1.5vh;
  width: 100%;
}

header #how {
  color: #b7aeb4;
  font-size: 2vh;
  font-weight: 400;
  text-align: center;
}

#config_button,
#prestats_button,
header #how {
  align-items: center;
  background-color: transparent;
  border: 2px solid #b7aeb4;
  border-radius: 20%;
  cursor: pointer;
  display: flex;
  height: 3vh;
  justify-content: center;
  padding: 0;
  width: 3vh;
  z-index: 1000;
}

header img {
  height: 3vh;
  width: 3vh;
}

#notify {
  flex-shrink: 0;
  height: 6vh;
}

#msg,
#notify {
  align-items: center;
  display: flex;
  gap: var(--letter-gap) 0;
  flex-direction: column;
  justify-content: center;
}

.msg {
  background-color: #009afe;
  border-radius: 1vh;
  box-sizing: border-box;
  font-size: 2.5vh;
  font-weight: 400;
  height: 5vh;
  margin: 0 auto;
  opacity: 0;
  padding: 0 1.5em;
  z-index: 2000;
}

@-webkit-keyframes popup {
  0% {
    opacity: 0;
    transform: scale(0);
  }

  25% {
    opacity: 1;
  }

  75% {
    transform: scale(1.15);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes popup {
  0% {
    opacity: 0;
    transform: scale(0);
  }

  25% {
    opacity: 1;
  }

  75% {
    transform: scale(1.15);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

main {
  align-items: flex-start;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  margin: 1vh 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  width: 100%;
}

main::-webkit-scrollbar {
  background-color: transparent;
  width: 12px;
}

main::-webkit-scrollbar-thumb {
  background: #625256;
  border-radius: 6px;
}

main #board {
  display: grid;
  flex-grow: 0;
  gap: var(--letter-gap) 0;
  max-height: 100%;
  width: var(--board-width);
}

main .row {
  display: grid;
  gap: 0 var(--letter-gap);
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: auto;
}

@-webkit-keyframes rownope {
  10% {
    transform: translateX(-14px);
  }

  20% {
    transform: translateX(14px);
  }

  30% {
    transform: translateX(-8px);
  }

  40% {
    transform: translateX(8px);
  }

  50% {
    transform: translateX(-4px);
  }

  60% {
    transform: translateX(4px);
  }

  70% {
    transform: translateX(-2px);
  }

  80% {
    transform: translateX(2px);
  }

  90% {
    transform: translateX(-1px);
  }

  to {
    transform: translateX(1px);
  }
}
/* ... */

